# amosero

./: README.md
amosero/: CMakeLists.txt  package.xml  show_xacro.sh  syncRobot.sh  time.sh
amosero_bringup/: CMakeLists.txt  package.xml
amosero_bringup/arduino/: motor_shield_v2.ino
amosero_bringup/launch/: gps.launch  imu.launch  joint_state_publisher.launch  odometry.launch  robot_pose_ekf.launch  robot_state_publisher.launch  tf_broadcast.launch  xtion.launch
amosero_bringup/scripts/: dc_tf_broadcast.py  imu_calc.py  joy_teleop.py  odometry_publisher.py  tf_broadcast.py  tf_broadcast_transform (paul@defendtheplanet.net 2014-10-08-20-16-08).py  tf_broadcast_transform.py  tf_broadcast_transform_pre_cleanup (paul@defendtheplanet.net 2014-10-08-20-16-08).py  tf_broadcast_transform_pre_cleanup.py
amosero_description/: CMakeLists.txt  package.xml  urdf.rviz
amosero_description/launch/: display.launch  test.launch  xacrodisplay.launch
amosero_description/robots/: amosero.urdf.xacro  amosero_falseRotation.urdf.xacro
amosero_description/urdf/: amosero.urdf  amosero_library.urdf.xacro  amosero_properties.urdf.xacro
amosero_navigation/: .cproject  .project  CMakeLists.txt  package.xml
amosero_navigation/laser/: laser_amcl_demo.launch  laser_gmapping_demo.launch  move_base_laser.launch
amosero_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  view_blind_nav.launch  view_model (paul@defendtheplanet.net 2014-10-08-20-16-08).launch  view_model.launch  (+2 more)
amosero_teleop/: CMakeLists.txt  package.xml
amosero_teleop/launch/: keyboard_teleop.launch  logitech.launch  ps3_teleop.launch  xbox360_teleop.launch
amosero_teleop/launch/includes/: velocity_smoother.launch.xml
amosero_teleop/scripts/: teleop_keyboard.py  teleop_ps3.py
amosero_viz/: CMakeLists.txt  package.xml
lsm9ds0_imu_9dof/: CMakeLists.txt  package.xml
(+20 files in other folders)
