<package>
  <name>amosero_teleop</name>
  <version>0.0.0</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <maintainer email="paul@defendtheplanet.net">Paul Petring</maintainer>
  <license>MIT</license>

  <author email="paul@defendtheplanet.net">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>amosero_bringup</run_depend>
</package>
